cpp static analysis post

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "J-M’s ‘lab notebook’"
+  title: "J-M's 'lab notebook'"
   navbar:
     right:
       - text: "About"
